# aq-engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: engine_performance.rs
integrations/mt5/: AqeMt5BridgeEA.mq5  README.md
src/: lib.rs  prelude.rs
src/core/: events.rs  mod.rs
src/core/alpha/: ema_price_crossover.rs  mod.rs  rsi_divergance_alpha.rs  test_entry.rs
src/core/backtest_storage/: mod.rs  types.rs
src/core/broker/: backtest_state.rs  data_stream.rs  mod.rs  mt5_bridge.rs  mt5_broker.rs  paper_broker.rs  tests.rs
src/core/broker/data_feeds/: mod.rs  mt5.rs  yahoo.rs
src/core/broker/types/: mod.rs
src/core/indicators/: atr.rs  ema.rs  mod.rs  rsi.rs  sma.rs
src/core/insight/: insight.rs  mod.rs  snapshot.rs
src/core/insight/types/: mod.rs
src/core/lifecycle/: close_all_filled_positions.rs  mod.rs  preseed_warmup_history.rs
src/core/pipeline/: allow_trading_window.rs  and_pipe.rs  basic_stop_loss.rs  basic_take_profit.rs  cancel_opposite.rs  close_market_changed.rs  dynamic_quantity_to_risk.rs  end_of_day_close.rs  full_account_quantity_to_risk.rs  insight_submit.rs  insight_ttl_config.rs  market_order_entry.rs  minimum_risk_to_reward.rs  mod.rs  or_pipe.rs  percentage_dca_levels.rs  percentage_risk_to_quantity.rs  quantity_sizing.rs  reject_expired_insight.rs  scale_out.rs
src/core/strategy/: aqs_ops.rs  aqs_sync.rs  aqs_types.rs  live_metrics.rs  mod.rs  tests.rs  traits.rs
src/core/strategy/types/: mod.rs
src/core/tui/: mod.rs
src/core/universe/: mod.rs
src/core/utils/: mod.rs  timeframe.rs  tools.rs
src/node/: builtins.rs  codegen.rs  config.rs  mod.rs  models.rs  test_debug.rs  types.rs
