[package]
name = "aq-engine"
version.workspace = true
authors.workspace = true
edition = "2024"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
polars = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
turso = { workspace = true, optional = true }


[features]
default = []
node = []
runtime = [
    "dep:polars",
    "dep:reqwest",
    "dep:tokio",
    "dep:parking_lot",
    "dep:dashmap",
    "dep:futures",
    "dep:surrealdb",
    "dep:turso",
    "dep:log",
]

[dev-dependencies]
env_logger = "0.11"
