[package]
name = "aq-engine"
version = "0.1.1"
authors = ["Moustapha Diaby <contact@isaacdiaby.tech>"]
description = "AlgoQuant Engine"
documentation = "https://algoquantstudio.com"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "js"] }
serde_json = "1"
log = { version = "0.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
polars = { version = "0.46", default-features = false, features = ["parquet", "lazy"], optional = true }
reqwest = { version = "0.13", features = ["json", "blocking", "cookies"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
parking_lot = { version = "0.12", optional = true }
dashmap = { version = "6.1.0", optional = true }
futures = { version = "0.3.32", features = ["executor"], optional = true }
surrealdb = { version = "3.0.2", default-features = false, features = ["protocol-ws", "protocol-http", "rustls"], optional = true }
turso = { version = "0.5.1", optional = true }
axum = { version = "0.8", optional = true }
env_logger = { version = "0.11", optional = true }


[features]
default = []
node = []
runtime = [
    "dep:polars",
    "dep:reqwest",
    "dep:tokio",
    "dep:parking_lot",
    "dep:dashmap",
    "dep:futures",
    "dep:surrealdb",
    "dep:turso",
    "dep:log",
    "dep:axum",
    "dep:env_logger",
]

[dev-dependencies]
env_logger = "0.11"
